<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context=".ui.LoginActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/newlogoo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="399dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/btn_bg"
        android:orientation="vertical"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:fontFamily="cursive"
            android:text="LOGIN"
            android:textColor="#ff7c17"

            android:textSize="38dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:text="Email"
                android:textColor="#BC3F46"
                android:drawableLeft="@drawable/user"
                android:drawableTint="#BC3F46"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:text="Password"
                android:textColor="#BC3F46"
                android:drawableLeft="@drawable/key"
                android:drawableTint="#BC3F46"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"

                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:text="Log In"
                android:background="@drawable/btn_signin"
                android:textColor="#ffffff"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginLeft="50dp"
                    android:text="Don't have an account?"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginLeft="0dp"
                    android:text="Register Now"
                    android:textColor="#ff7c17"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>