<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff6600"
    tools:context=".ui.RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/btn_bg"
        android:orientation="vertical"
        android:paddingRight="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:fontFamily="cursive"
            android:text="Register"
            android:textColor="#ff7c17"
            android:textSize="28dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:text="First name"
            android:textColor="#BC3F46"
            android:drawableLeft="@drawable/user"
            android:drawableTint="#BC3F46"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etfname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="0dp"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:text="Last name"
            android:drawableLeft="@drawable/lname"
            android:drawableTint="#BC3F46"
            android:textColor="#BC3F46"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etLname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"

            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:drawableLeft="@drawable/email"
            android:drawableTint="#BC3F46"
            android:text="Email"
            android:textColor="#BC3F46"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"

            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:drawableLeft="@drawable/key"
            android:drawableTint="#BC3F46"
            android:text="Password"
            android:textColor="#BC3F46"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:drawableLeft="@drawable/key"
            android:drawableTint="#BC3F46"
            android:text="Confirm Password"
            android:textColor="#BC3F46"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etCnfpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:drawableLeft="@drawable/home"
            android:drawableTint="#BC3F46"
            android:text="Address"
            android:textColor="#BC3F46"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:drawableLeft="@drawable/phone"
            android:drawableTint="#BC3F46"
            android:text="Contact"
            android:textColor="#BC3F46"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:inputType="text" />


        <Button
            android:id="@+id/btnregister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:background="@drawable/btn_signin"
            android:backgroundTint="#5c5c3d"
            android:text="Register now" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="20dp"
                android:text="Have an account?"
                android:textColor="@color/black"
                android:textSize="12dp"
                />

            <TextView
                android:id="@+id/tvSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="0dp"
                android:text="Log In"
                android:textColor="#ff7c17"
                android:textSize="12dp"
                 />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>