package com.example.ecommercesiteforonlineshopping

import androidx.test.espresso.Espresso
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.filters.LargeTest
import com.example.ecommercesiteforonlineshopping.fragments.ProfileFragment
import com.example.ecommercesiteforonlineshopping.ui.FeedbackActivity
import com.example.ecommercesiteforonlineshopping.ui.LoginActivity
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.junit.runners.JUnit4

@LargeTest
@RunWith(JUnit4::class)
class TestUpdate {
//    @get:Rule
//    val testRule = ActivityScenarioRule(ProfileFragment::class.java)
//
//    @Test
//    fun UpdateActivityTest() {
//        Espresso.onView(ViewMatchers.withId(R.id.Profilename))
//            .perform(ViewActions.typeText("ram1"))
//
//        Espresso.onView(ViewMatchers.withId(R.id.Profileemail))
//            .perform(ViewActions.typeText("ram1@gmail.com"))
//
//        Espresso.onView(ViewMatchers.withId(R.id.Profilepassword))
//            .perform(ViewActions.typeText("1234567"))
//
//        Espresso.onView(ViewMatchers.withId(R.id.Profilephone))
//            .perform(ViewActions.typeText("1234567890"))
//
//        Espresso.closeSoftKeyboard()
//
//        Espresso.onView(ViewMatchers.withId(R.id.btnprofileupdate))
//            .perform(ViewActions.click())
//
//        Thread.sleep(2000)
//
//
//
//    }
}